[package]
name = "tca9539"
version = "0.2.0"
description = "TCA9539 (also PCA9539) 16-Bit I2C I/O Expander with I2C Interface"
authors = ["Robert Jördens <rj@quartiq.de>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO", "tca9539", "pca9539", "I2C"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/quartiq/tca9539"
edition = "2021"
exclude = [
    "docs/",
    "docs/*",
]

[dependencies]
embedded-hal = "0.2.3"
bit_field = "0.10.1"
num_enum = { version = "0.7.2", default-features = false }
